# httspy

./: README.md  index.html  main.py  pyproject.toml
src/: generator.py  monitor.py  parser.py  tail.py  web.py
tests/: test.py
